--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ body{
     width: 100%;
     height: 739px;
     flex-shrink: 0;
-    background: linear-gradient(0deg, rgba(8, 8, 8, 0.14) 0%, rgba(8, 8, 8, 0.14) 100%), url("/assets/add-areabg.png") lightgray 50% / cover no-repeat;
+    background: linear-gradient(0deg, rgba(8, 8, 8, 0.14) 0%, rgba(8, 8, 8, 0.14) 100%), url("assets/add-areabg.png") lightgray 50% / cover no-repeat;
 }
 
 .add-area .left-text{
