--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@ body{
 
 .header{
     
-    
     width: 100%;
 }
 .header-bg{
@@ -27,23 +26,56 @@ body{
     -webkit-text-fill-color: transparent;
 
 }
-.navbar .nav-item{
+
+/* .navbar .nav-item .active{
+    color: #FFF;
+    font-family: Halant;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115.909%; 
+} 
+*/
+
+
+.navbar-dark, .navbar[data-bs-theme=dark] {
+    --bs-navbar-color: #FFF;;
+    --bs-navbar-hover-color: rgba(255, 255, 255, 0.75);
+    --bs-navbar-disabled-color: rgba(255, 255, 255, 0.25);
+    --bs-navbar-active-color: #fff;
+    --bs-navbar-brand-color: #fff;
+    --bs-navbar-brand-hover-color: #fff;
+    --bs-navbar-toggler-border-color: rgba(255, 255, 255, 0.1);
+    --bs-navbar-toggler-icon-bg: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e);
+}
+
+.navbar  .nav-item{
+
+    color: #FFF;
+    font-family: Halant;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 115.909%; /* 22.023px */
+}
+
+.navbar .nav-item .nav-link.active {
     color: #FFF;
     font-family: Halant;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
     line-height: 115.909%; /* 27.818px */
-}
-.navbar .right-side{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    float: right;
-    margin-left: 135px;
+  }
+  
+  
+  /* {
 
+    
 }
+
+
+ */
 
 .add-area{
     width: 100%;
@@ -52,17 +84,25 @@ body{
     background: linear-gradient(0deg, rgba(8, 8, 8, 0.14) 0%, rgba(8, 8, 8, 0.14) 100%), url("assets/add-areabg.png") lightgray 50% / cover no-repeat;
 }
 
-.add-area .left-text{
-    width: 592px;
-
-    color: #FFF;
-    font-family: Gupter;
-    font-size: 44px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 115.909%; /* 51px */
+.nav-center{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
-.add-area .left-text span{
-    
+ .right-side{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
+
+
+/* banner */
+
+.add-area{
+    background: linear-gradient(0deg, rgba(8, 8, 8, 0.14) 0%, rgba(8, 8, 8, 0.14) 100%), url(assets/add-areabg.png) lightgray 50% / cover no-repeat;
+}
+
+/*  */
